@@ -122,7 +122,7 @@ fi
 encode()
 {
     if [ -x "$MIMENCODE" ]; then
-	$MIMENCODE $1 2>$ERRORSTO
+	$MIMENCODE < $1 2>$ERRORSTO
     elif [ -x "$UUENCODE" ]; then
 	if [ "$ENCODING" = "base64" ]; then
 	    $UUENCODE -m $1 $1 | grep -E -v "^begin|^====$" 2>$ERRORSTO
@@ -132,7 +132,7 @@ encode()
     else
 	# Do not use "-x" for backward compatibility; even if it fails
 	# this is last chance to encode data, so there's nothing to lose.
-	$MIMENCODE $1 2>$ERRORSTO
+	$MIMENCODE < $1 2>$ERRORSTO
     fi
 }
 
