@@ -449,7 +449,7 @@ mimeEncode()
         return # cannot do much more without a file
     fi
     if [ -x "$MIMENCODE" ]; then
-        $MIMENCODE $FILENAME 2>$ERRORSTO
+        $MIMENCODE < $FILENAME 2>$ERRORSTO
     elif [ -x "$UUENCODE" ]; then
         if [ "$ENCODING" = "base64" ]; then
             $UUENCODE -m $FILENAME $FILENAME \
@@ -462,7 +462,7 @@ mimeEncode()
     else
 	# Do not use "-x" for backward compatibility; even if it fails
 	# this is last chance to encode data, so there's nothing to lose.
-	$MIMENCODE $FILENAME 2>$ERRORSTO
+	$MIMENCODE < $FILENAME 2>$ERRORSTO
     fi
 }
 
