@@ -62,8 +62,6 @@ TTYCMD=tty
 
 INFO=$SBIN/faxinfo
 FAX2PS=$TIFFBIN/fax2ps
-MIMENCODE=mimencode
-ENCODING=base64
 TIFF2PS=tiff2ps
 PS2PDF=ps2pdf
 TOADDR=FaxMaster
@@ -93,6 +91,26 @@ COMMID="$4"
 MSG="$5"
 
 FILENAME=`echo $FILE | $SED -e 's/\.tif//' -e 's/recvq\///'`
+
+#
+# Produce mailable encoding for binary files.
+# 
+encode()
+{
+    if [ -x "$MIMENCODE" ]; then
+	$MIMENCODE < $1 2>$ERRORSTO
+    elif [ -x "$UUENCODE" ]; then
+	if [ "$ENCODING" = "base64" ]; then
+	    $UUENCODE -m $1 $1 | grep -E -v "^begin|^====$" 2>$ERRORSTO
+	else
+	    $UUENCODE $1 $1 | grep -E -v "^begin|^====$" 2>$ERRORSTO
+	fi
+    else
+	# Do not use "-x" for backward compatibility; even if it fails
+	# this is last chance to encode data, so there's nothing to lose.
+	$MIMENCODE < $1 2>$ERRORSTO
+    fi
+}
 
 if [ -f $FILE ]; then
     #
@@ -179,7 +197,7 @@ if [ -f $FILE ]; then
 	    echo "Content-Transfer-Encoding: $ENCODING"
 	    echo "Content-Disposition: attachment; filename=\"$FILENAME.tif\""
 	    echo ""
-	    $MIMENCODE $FILE 2>/dev/null
+	    encode $FILE
 	elif [ "$FILETYPE" = "pdf" ]; then
 	    echo "Content-Type: application/pdf; name=\"c$COMMID.pdf\""
 	    echo "Content-Description: FAX document"
@@ -196,7 +214,7 @@ if [ -f $FILE ]; then
 		$SED 's/.*Resolution: [0-9]*, \([0-9]*\).*/\1/g' | sort -n | $SED -n '$p'`
 	    $TIFF2PS -a -O $FILE.ps $FILE 2>/dev/null # fax2ps looks bad
 	    $PS2PDF -g$GW\x$GL -r$RW\x$RL $FILE.ps $FILE.pdf 2>/dev/null
-	    $MIMENCODE $FILE.pdf 2>/dev/null
+	    encode $FILE.pdf
 	    $RM -f $FILE.ps $FILE.pdf 2>/dev/null   
 	elif [ "$FILETYPE" = "ps" ]; then
 	    echo "Content-Type: application/postscript; name=\"$FILENAME.ps\""
